# GeoPoseBench-geo-pose-eval

./: LICENSE  README.md  pyproject.toml  requirements.txt
datasets/: README.md
scripts/: encode_prediction.py  encode_reference.py  evaluate.py
src/geo_pose_eval/: __init__.py  __main__.py  cli.py  connectivity.py  encoders.py  evaluator.py  io.py  metrics.py  projection.py  schemas.py
tests/: test_pipeline.py
