[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-pose-eval"
version = "0.1.0"
description = "Standalone geometric localization evaluation toolkit with a unified Pose schema."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
geo-pose-eval = "geo_pose_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
